--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
     "gatsby-remark-autolink-headers": "^5.8.0",
     "gatsby-remark-image-attributes": "^1.1.0",
     "gatsby-remark-images": "^6.8.0",
+    "gatsby-remark-prismjs": "^6.8.0",
     "gatsby-source-filesystem": "^4.7.0",
     "gatsby-transformer-remark": "^5.7.0",
     "gatsby-transformer-sharp": "^4.8.0",
+    "prismjs": "^1.27.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1"
   },
