--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "start": "gatsby develop",
     "serve": "gatsby serve",
     "clean": "gatsby clean",
+    "deploy": "gatsby build && gh-pages -d public -b main",
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
   "dependencies": {
@@ -29,6 +30,7 @@
     "react-dom": "^17.0.1"
   },
   "devDependencies": {
+    "gh-pages": "^3.2.3",
     "prettier": "^2.5.1"
   },
   "repository": {
