--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "gatsby": "^4.7.2",
     "gatsby-plugin-catch-links": "^4.8.0",
+    "gatsby-plugin-image": "^2.9.0",
     "gatsby-plugin-sharp": "^4.8.0",
     "gatsby-remark-autolink-headers": "^5.8.0",
     "gatsby-remark-image-attributes": "^1.1.0",
